@@ -9,9 +9,9 @@ plugins {
     id "application"
     id 'org.openjfx.javafxplugin' version '0.0.13'
 
-    id 'org.springframework.boot' version '3.0.4'
+    id 'org.springframework.boot' version '3.0.5'
     id 'io.spring.dependency-management' version '1.1.0'
-    id "com.github.spotbugs" version '5.0.13'
+    id "com.github.spotbugs" version '5.0.14'
 }
 
 spotbugs {
@@ -38,7 +38,7 @@ sonar {
 }
 
 jacoco {
-    toolVersion = "0.8.8"
+    toolVersion = "0.8.9"
 }
 
 ext {
@@ -49,9 +49,9 @@ ext {
     uom_se = 'tec.uom:uom-se:1.0.10'
     javax_json = 'org.glassfish:javax.json:1.1.4'
     commons_math3 = 'org.apache.commons:commons-math3:3.6.1'
-    commons_csv = 'org.apache.commons:commons-csv:1.9.0'
-    jSerialComm = 'com.fazecast:jSerialComm:[2.9.1,3.0.0)'
-    jenetics = 'io.jenetics:jenetics:7.1.1'
+    commons_csv = 'org.apache.commons:commons-csv:1.10.0'
+    jSerialComm = 'com.fazecast:jSerialComm:[2.9.3,3.0.0)'
+    jenetics = 'io.jenetics:jenetics:7.1.2'
     javaVersion = JavaVersion.VERSION_19
 }
 
@@ -63,7 +63,7 @@ wrapper {
 
 allprojects {
     group = 'com.ak'
-    version = '2023.03.04'
+    version = '2023.04.06'
     apply plugin: 'idea'
     idea {
         module {
@@ -113,10 +113,8 @@ allprojects {
         maxHeapSize = '1G'
     }
 
-    tasks.withType(Test.class).configureEach {
-        jacoco {
-            includes = ["com.ak.*"]
-        }
+    tasks.withType(JavaCompile).each {
+        it.options.compilerArgs.add('--enable-preview')
     }
 }
 
